--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,6 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #eeeeee;
   background-color: #101010;
-  width: 1920px;
-  border: #28E5FF 1px solid;
   height: 100%;
   padding: 24px;
   margin: 0;
@@ -374,3 +372,4 @@ div.subject-header {
   animation-duration: 4s;
   animation-timing-function: ease-out;
 }
+/*# sourceMappingURL=styles.css.map */
