--- a/styles.less
+++ b/styles.less
@@ -63,6 +63,7 @@ body {
   & article {
     width: 100%;
     flex: 1;
+    position: relative;
     &.center {
       display: flex;
       justify-content: center;
