--- a/styles.less
+++ b/styles.less
@@ -71,7 +71,12 @@ body {
     }
   }
   & footer {
+    color: #28E5FF;
     user-select: none;
+    &:before {
+      content: "❤";
+      margin-right: 12px;
+    }
   }
 }
 
