Convolver play impulses

--- a/styles.less
+++ b/styles.less
@@ -15,9 +15,9 @@ html, body {
 
   // 1920 x 1080 (Brighton) //
   // debugging //
-  //width: 1920px;
+  width: 1920px;
   //width: 1400px;
-  //border: #28E5FF 1px solid;
+  border: #28E5FF 1px solid;
 
   // debugging //
   height: 100%;
