--- a/convolver.css
+++ b/convolver.css
@@ -1,7 +1,8 @@
-.impulses {
+.list {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  margin: 12px 0;
 }
 .impulse {
   width: 172px;
@@ -18,5 +19,27 @@
 .impulse.active {
   color: #19404d;
   background-color: #28E5FF;
+}
+.play {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  background-color: #333;
+  color: #FFF;
+  text-align: center;
+  font-size: 22px;
+  padding-left: 4px;
+  line-height: 48px;
+  user-select: none;
+  cursor: pointer;
+}
+.play.active {
+  color: #333;
+  background-color: #FFF;
+}
+.waveform {
+  width: 100%;
+  height: 128px !important;
+  margin: 16px 0 0 0;
 }
 /*# sourceMappingURL=convolver.css.map */
