--- a/convolver.less
+++ b/convolver.less
@@ -1,7 +1,8 @@
-.impulses {
+.list {
   display: flex;
   justify-content: space-around;
   width: 100%;
+  margin: 12px 0;
 }
 
 .impulse {
@@ -19,4 +20,28 @@
     color: #19404d;
     background-color: #28E5FF;
   }
+}
+
+.play {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  background-color: #333;
+  color: #FFF;
+  text-align: center;
+  font-size: 22px;
+  padding-left: 4px;
+  line-height: 48px;
+  user-select: none;
+  cursor: pointer;
+  &.active {
+    color: #333;
+    background-color: #FFF;
+  }
+}
+
+.waveform {
+  width: 100%;
+  height: 128px !important;
+  margin: 16px 0 0 0;
 }
