--- a/styles.less
+++ b/styles.less
@@ -15,9 +15,8 @@ html, body {
 
   // 1920 x 1080 (Brighton) //
   // debugging //
-  width: 1920px;
-  //width: 1400px;
-  border: #28E5FF 1px solid;
+  //width: 1920px;
+  //border: #28E5FF 1px solid;
 
   // debugging //
   height: 100%;
