--- a/styles.less
+++ b/styles.less
@@ -164,6 +164,7 @@ button {
   font-size: 10px;
   outline: transparent;
   text-transform: uppercase;
+  cursor: pointer;
   &.toggle {
     color: #28E5FF;
     background-color: #19404d;
